--- a/Models Django_Kelompok 16/LOSIKTAILOR/LSKTAILOR/templates/createdatabaju.html
+++ b/Models Django_Kelompok 16/LOSIKTAILOR/LSKTAILOR/templates/createdatabaju.html
@@ -27,7 +27,11 @@
             <tr>
                 <th>Harga Baju</th>
                 <td>
-                    <input type="number" name="hargabaju">
+                    <select name="hargabaju">
+                        <option value="50000">50000</option>
+                        <option value="40000">40000</option>
+                        <option value="60000">60000</option>
+                    </select>
                 </td>
             </tr>
         </table>
