--- a/Models Django_Kelompok 16/LOSIKTAILOR/LSKTAILOR/templates/createdatatambahan.html
+++ b/Models Django_Kelompok 16/LOSIKTAILOR/LSKTAILOR/templates/createdatatambahan.html
@@ -25,7 +25,12 @@
             <tr>
                 <th>Harga Tambahan</th>
                 <td>
-                    <input type="number" name="hargatambahan">
+                    <select name="hargatambahan">
+                        <option value="5000">5000</option>
+                        <option value="3000">3000</option>
+                        <option value="2000">2000</option>
+                        <option value="1000">1000</option>
+                    </select>
                 </td>
             </tr>
         </table>
