--- a/Models Django_Kelompok 16/LOSIKTAILOR/LSKTAILOR/templates/updatedatatambahan.html
+++ b/Models Django_Kelompok 16/LOSIKTAILOR/LSKTAILOR/templates/updatedatatambahan.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Data Tambahan</title>
+    <title>Update Data Tambahan</title>
 </head>
 <body>
-    <h1>Create Data Tambahan</h1>
+    <h1>Update Data Tambahan</h1>
     <form action="" method="post">
         {% csrf_token %}
         <table>
@@ -25,7 +25,12 @@
             <tr>
                 <th>Harga Tambahan</th>
                 <td>
-                    <input type="number" name="hargatambahan">
+                    <select name="hargatambahan">
+                        <option value="5000">5000</option>
+                        <option value="3000">3000</option>
+                        <option value="2000">2000</option>
+                        <option value="1000">1000</option>
+                    </select>
                 </td>
             </tr>
         </table>
